clean tokens wrangle and add tokens  information

--- a/bot/wrangler.toml
+++ b/bot/wrangler.toml
@@ -2,7 +2,7 @@ name = 'template-commerce01'
 minify = false
 type = 'javascript'
 
-account_id = "448a5b0c80d31dbd28fe2e8afdd9a050"
+account_id = ""
 workers_dev = true  # Para rodar no domínio de workers-dev
 compatibility_date = "2024-02-18"  # Use a data atual
 main = "worker.js"  # Caminho correto para o seu script
@@ -18,9 +18,13 @@ sourcemap = false
 
 [[kv_namespaces]]
 binding = "sessionState"
-id = "46fb877c8a0d4d4ea1c7cd58732d555f"
+id = ""
 
 [[d1_databases]]
 binding = "Data"  # Nome da variável no código
 database_name = "template_comerce01"
-database_id = "f804454f-52f2-44cb-aaa0-30ebee5c36db"
+database_id = ""
+
+#Crie também uma variável "tokens_G" para armazenar os tokens do Google e outra chamada "bot_Token" para armazenar os tokens do telegramBot.
+#tokens_G = GOOGLE_CLIENT_ID, GOOGLE_CLIENT_SECRET, GOOGLE_REFRESH_TOKEN, DRIVE_FOLDER_ID   | não deixe espaços entre os tokens
+#bot_Token = token Id do bot , Id do chat | não deixe espaços entre os ids.
